--- a/src/ProtocolGateway.IotHubClient/ProtocolGateway.IotHubClient.csproj
+++ b/src/ProtocolGateway.IotHubClient/ProtocolGateway.IotHubClient.csproj
@@ -210,6 +210,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ProtocolGateway.IotHubClient.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProtocolGateway.Core\ProtocolGateway.Core.csproj">
